# mediaview

./: .gitignore  LICENSE  README.md  meson.build
demo/: demo.cpp  demogif.cpp  demoimg.cpp  demosdresimg.cpp  demovideo.cpp
include/gifview/: gifview.hpp
include/mediaview/: gifview.hpp  mediaview.hpp  resizable-img.hpp  singledimensionresimg.hpp  videoview.hpp
src/: gifview.cpp  resizable-img.cpp  singledimensionresimg.cpp  videoview.cpp
